--- a/.nvim/config.json
+++ b/.nvim/config.json
@@ -1,6 +1,7 @@
 {
   "commands": {
     "run": "bun index.ts",
-    "test": "bun test"
+    "test": "bun test",
+    "test:watch": "bun test --watch"
    }
 }
